3. Abstract Syntax/tiger.output
Estado 16 conflitos: 1 de deslocamento/redução
Estado 20 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: root

    2 root: %empty
    3     | expre

    4 expre: INT
    5      | STRING
    6      | NIL
    7      | BREAK
    8      | LPAREN expre_list RPAREN
    9      | lvalue
   10      | lvalue ASSIGN expre
   11      | id LPAREN arg_list RPAREN
   12      | id LBRACE fieldExpre RBRACE
   13      | id LBRACK expre RBRACK OF expre
   14      | expre AND expre
   15      | expre OR expre
   16      | expre_opera
   17      | expre_compa
   18      | expre_if
   19      | expre_for
   20      | expre_while
   21      | expre_switch
   22      | expre_let

   23 id: ID

   24 expre_opera: expre PLUS expre
   25            | expre MINUS expre
   26            | MINUS expre
   27            | expre TIMES expre
   28            | expre DIVIDE expre

   29 expre_compa: expre LT expre
   30            | expre LE expre
   31            | expre GT expre
   32            | expre GE expre
   33            | expre EQ expre
   34            | expre NEQ expre

   35 arg_list: %empty
   36         | expre
   37         | expre COMMA arg_list

   38 lvalue: id
   39       | id LBRACK expre RBRACK
   40       | lvalue DOT id
   41       | lvalue LBRACK expre RBRACK

   42 fieldExpre: %empty
   43           | id EQ expre
   44           | id EQ expre COMMA fieldExpre

   45 expre_list: %empty
   46           | expre
   47           | expre SEMICOLON expre_list

   48 expre_if: IF expre THEN expre
   49         | expre_if ELSE expre

   50 expre_for: FOR id ASSIGN expre TO expre DO expre

   51 expre_while: WHILE expre DO expre

   52 expre_switch: SWITCH op_swi

   53 op_swi: LPAREN var_swi RPAREN LBRACE ops_swi RBRACE

   54 var_swi: INT
   55        | STRING

   56 ops_swi: CASE var_swi COLON expre BREAK COLON
   57        | DEFAULT COLON expre SEMICOLON

   58 expre_let: LET dec_list IN expre_list END

   59 dec_list: %empty
   60         | dec dec_list

   61 dec: fun_dec
   62    | var_dec
   63    | ty_dec

   64 fun_dec: FUNCTION id LPAREN ty_field_list RPAREN EQ expre
   65        | FUNCTION id LPAREN ty_field_list RPAREN COLON id EQ expre

   66 ty_field_list: %empty
   67              | ty_field
   68              | ty_field COMMA ty_field_list

   69 ty_field: id COLON id

   70 var_dec: VAR id ASSIGN expre
   71        | VAR id COLON id ASSIGN expre

   72 ty_dec: TYPE id EQ ty

   73 ty: id
   74   | LBRACE ty_field_list RBRACE
   75   | ARRAY OF id


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    ID <sval> (258) 23
    STRING <sval> (259) 5 55
    INT <ival> (260) 4 54
    COMMA (261) 37 44 68
    COLON (262) 56 57 65 69 71
    SEMICOLON (263) 47 57
    LPAREN (264) 8 11 53 64 65
    RPAREN (265) 8 11 53 64 65
    LBRACK (266) 13 39 41
    RBRACK (267) 13 39 41
    LBRACE (268) 12 53 74
    RBRACE (269) 12 53 74
    DOT (270) 40
    PLUS (271) 24
    MINUS (272) 25 26
    TIMES (273) 27
    DIVIDE (274) 28
    EQ (275) 33 43 44 64 65 72
    NEQ (276) 34
    LT (277) 29
    LE (278) 30
    GT (279) 31
    GE (280) 32
    AND (281) 14
    OR (282) 15
    ASSIGN (283) 10 50 70 71
    ARRAY (284) 75
    IF (285) 48
    THEN (286) 48
    ELSE (287) 49
    WHILE (288) 51
    FOR (289) 50
    TO (290) 50
    DO (291) 50 51
    LET (292) 58
    IN (293) 58
    END (294) 58
    OF (295) 13 75
    BREAK (296) 7 56
    NIL (297) 6
    FUNCTION (298) 64 65
    VAR (299) 70 71
    TYPE (300) 72
    SWITCH (301) 52
    CASE (302) 56
    DEFAULT (303) 57
    UMINUS (304)


Não terminais com as regras onde eles aparecem

    $accept (50)
        à esquerda: 0
    program <expre> (51)
        à esquerda: 1
        à direita: 0
    root <root> (52)
        à esquerda: 2 3
        à direita: 1
    expre <expre> (53)
        à esquerda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        à direita: 3 10 13 14 15 24 25 26 27 28 29 30 31 32 33 34 36 37 39 41 43 44 46 47 48 49 50 51 56 57 64 65 70 71
    id <sval> (54)
        à esquerda: 23
        à direita: 11 12 13 38 39 40 43 44 50 64 65 69 70 71 72 73 75
    expre_opera <expre> (55)
        à esquerda: 24 25 26 27 28
        à direita: 16
    expre_compa <expre> (56)
        à esquerda: 29 30 31 32 33 34
        à direita: 17
    arg_list <expre_list> (57)
        à esquerda: 35 36 37
        à direita: 11 37
    lvalue <var> (58)
        à esquerda: 38 39 40 41
        à direita: 9 10 40 41
    fieldExpre <field_expre_list> (59)
        à esquerda: 42 43 44
        à direita: 12 44
    expre_list <expre_list> (60)
        à esquerda: 45 46 47
        à direita: 8 47 58
    expre_if <expre> (61)
        à esquerda: 48 49
        à direita: 18 49
    expre_for <expre> (62)
        à esquerda: 50
        à direita: 19
    expre_while <expre> (63)
        à esquerda: 51
        à direita: 20
    expre_switch <expre> (64)
        à esquerda: 52
        à direita: 21
    op_swi <expre> (65)
        à esquerda: 53
        à direita: 52
    var_swi <expre> (66)
        à esquerda: 54 55
        à direita: 53 56
    ops_swi <expre> (67)
        à esquerda: 56 57
        à direita: 53
    expre_let <expre> (68)
        à esquerda: 58
        à direita: 22
    dec_list <dec_list> (69)
        à esquerda: 59 60
        à direita: 58 60
    dec <dec> (70)
        à esquerda: 61 62 63
        à direita: 60
    fun_dec <fun_dec> (71)
        à esquerda: 64 65
        à direita: 61
    ty_field_list <ty_field_list> (72)
        à esquerda: 66 67 68
        à direita: 64 65 68 74
    ty_field <ty_field> (73)
        à esquerda: 69
        à direita: 67 68
    var_dec <dec> (74)
        à esquerda: 70 71
        à direita: 62
    ty_dec <ty_dec> (75)
        à esquerda: 72
        à direita: 63
    ty <ty> (76)
        à esquerda: 73 74 75
        à direita: 72


Estado 0

    0 $accept: . program $end

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 2 (root)

    program       ir ao estado 13
    root          ir ao estado 14
    expre         ir ao estado 15
    id            ir ao estado 16
    expre_opera   ir ao estado 17
    expre_compa   ir ao estado 18
    lvalue        ir ao estado 19
    expre_if      ir ao estado 20
    expre_for     ir ao estado 21
    expre_while   ir ao estado 22
    expre_switch  ir ao estado 23
    expre_let     ir ao estado 24


Estado 1

   23 id: ID .

    $padrão  reduzir usando a regra 23 (id)


Estado 2

    5 expre: STRING .

    $padrão  reduzir usando a regra 5 (expre)


Estado 3

    4 expre: INT .

    $padrão  reduzir usando a regra 4 (expre)


Estado 4

    8 expre: LPAREN . expre_list RPAREN

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 45 (expre_list)

    expre         ir ao estado 25
    id            ir ao estado 16
    expre_opera   ir ao estado 17
    expre_compa   ir ao estado 18
    lvalue        ir ao estado 19
    expre_list    ir ao estado 26
    expre_if      ir ao estado 20
    expre_for     ir ao estado 21
    expre_while   ir ao estado 22
    expre_switch  ir ao estado 23
    expre_let     ir ao estado 24


Estado 5

   26 expre_opera: MINUS . expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre         ir ao estado 27
    id            ir ao estado 16
    expre_opera   ir ao estado 17
    expre_compa   ir ao estado 18
    lvalue        ir ao estado 19
    expre_if      ir ao estado 20
    expre_for     ir ao estado 21
    expre_while   ir ao estado 22
    expre_switch  ir ao estado 23
    expre_let     ir ao estado 24


Estado 6

   48 expre_if: IF . expre THEN expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre         ir ao estado 28
    id            ir ao estado 16
    expre_opera   ir ao estado 17
    expre_compa   ir ao estado 18
    lvalue        ir ao estado 19
    expre_if      ir ao estado 20
    expre_for     ir ao estado 21
    expre_while   ir ao estado 22
    expre_switch  ir ao estado 23
    expre_let     ir ao estado 24


Estado 7

   51 expre_while: WHILE . expre DO expre

    ID      deslocar, e ir ao estado 1
    STRING  deslocar, e ir ao estado 2
    INT     deslocar, e ir ao estado 3
    LPAREN  deslocar, e ir ao estado 4
    MINUS   deslocar, e ir ao estado 5
    IF      deslocar, e ir ao estado 6
    WHILE   deslocar, e ir ao estado 7
    FOR     deslocar, e ir ao estado 8
    LET     deslocar, e ir ao estado 9
    BREAK   deslocar, e ir ao estado 10
    NIL     deslocar, e ir ao estado 11
    SWITCH  deslocar, e ir ao estado 12

    expre         ir ao estado 29
    id            ir ao estado 16
    expre_opera   ir ao estado 17
    expre_compa   ir ao estado 18
    lvalue        ir ao estado 19
    expre_if      ir ao estado 20
    expre_for     ir ao estado 21
    expre_while   ir ao estado 22
    expre_switch  ir ao estado 23
    expre_let     ir ao estado 24


Estado 8

   50 expre_for: FOR . id ASSIGN expre TO expre DO expre

    ID  deslocar, e ir ao estado 1

    id  ir ao estado 30


Estado 9

   58 expre_let: LET . dec_list IN expre_list END

    FUNCTION  deslocar, e ir ao estado 31
    VAR       deslocar, e ir ao estado 32
    TYPE      deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 59 (dec_list)

    dec_list  ir ao estado 34
    dec       ir ao estado 35
    fun_dec   ir ao estado 36
    var_dec   ir ao estado 37
    ty_dec    ir ao estado 38


Estado 10

    7 expre: BREAK .

    $padrão  reduzir usando a regra 7 (expre)


Estado 11

    6 expre: NIL .

    $padrão  reduzir usando a regra 6 (expre)


Estado 12

   52 expre_switch: SWITCH . op_swi

    LPAREN  deslocar, e ir ao estado 39

    op_swi  ir ao estado 40


Estado 13

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 41


Estado 14

    1 program: root .

    $padrão  reduzir usando a regra 1 (program)


Estado 15

    3 root: expre .
   14 expre: expre . AND expre
   15      | expre . OR expre
   24 expre_opera: expre . PLUS expre
   25            | expre . MINUS expre
   27            | expre . TIMES expre
   28            | expre . DIVIDE expre
   29 expre_compa: expre . LT expre
   30            | expre . LE expre
   31            | expre . GT expre
   32            | expre . GE expre
   33            | expre . EQ expre
   34            | expre . NEQ expre

    PLUS    deslocar, e ir ao estado 42
    MINUS   deslocar, e ir ao estado 43
    TIMES   deslocar, e ir ao estado 44
    DIVIDE  deslocar, e ir ao estado 45
    EQ      deslocar, e ir ao estado 46
    NEQ     deslocar, e ir ao estado 47
    LT      deslocar, e ir ao estado 48
    LE      deslocar, e ir ao estado 49
    GT      deslocar, e ir ao estado 50
    GE      deslocar, e ir ao estado 51
    AND     deslocar, e ir ao estado 52
    OR      deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 3 (root)


Estado 16

   11 expre: id . LPAREN arg_list RPAREN
   12      | id . LBRACE fieldExpre RBRACE
   13      | id . LBRACK expre RBRACK OF expre
   38 lvalue: id .
   39       | id . LBRACK expre RBRACK

    LPAREN  deslocar, e ir ao estado 54
    LBRACK  deslocar, e ir ao estado 55
    LBRACE  deslocar, e ir ao estado 56

    LBRACK    [reduzir usando a regra 38 (lvalue)]
    $padrão  reduzir usando a regra 38 (lvalue)


Estado 17

   16 expre: expre_opera .

    $padrão  reduzir usando a regra 16 (expre)


Estado 18

   17 expre: expre_compa .

    $padrão  reduzir usando a regra 17 (expre)


Estado 19

    9 expre: lvalue .
   10      | lvalue . ASSIGN expre
   40 lvalue: lvalue . DOT id
   41       | lvalue . LBRACK expre RBRACK

    LBRACK  deslocar, e ir ao estado 57
    DOT     deslocar, e ir ao estado 58
    ASSIGN  deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 9 (expre)


Estado 20

   18 expre: expre_if .
   49 expre_if: expre_if . ELSE expre

    ELSE  deslocar, e ir ao estado 60

    ELSE      [reduzir usando a regra 18 (expre)]
    $padrão  reduzir usando a regra 18 (expre)


Estado 21

   19 expre: expre_for .

    $padrão  reduzir usando a regra 19 (expre)


Estado 22

   20 expre: expre_while .

    $padrão  reduzir usando a regra 20 (expre)


Estado 23

   21 expre: expre_switch .

    $padrão  reduzir usando a regra 21 (expre)


Estado 24

   22 expre: expre_let .

    $padrão  reduzir usando a regra 22 (expre)


Estado 25

   14 expre: expre . AND expre
   15      | expre . OR expre
   24 expre_opera: expre . PLUS expre
   25            | expre . MINUS expre
   27            | expre . TIMES expre
   28            | expre . DIVIDE expre
   29 expre_compa: expre . LT expre
   30            | expre . LE expre
   31            | expre . GT expre
   32            | expre . GE expre
   33            | expre . EQ expre
   34            | expre . NEQ expre
   46 expre_list: expre .
   47           | expre . SEMICOLON expre_list

    SEMICOLON  deslocar, e ir ao estado 61
    PLUS       deslocar, e ir ao estado 42
    MINUS      deslocar, e ir ao estado 43
    TIMES      deslocar, e ir ao estado 44
    DIVIDE     deslocar, e ir ao estado 45
    EQ         deslocar, e ir ao estado 46
    NEQ        deslocar, e ir ao estado 47
    LT         deslocar, e ir ao estado 48
    LE         deslocar, e ir ao estado 49
    GT         deslocar, e ir ao estado 50
    GE         deslocar, e ir ao estado 51
    AND        deslocar, e ir ao estado 52
    OR         deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 46 (expre_list)


Estado 26

    8 expre: LPAREN expre_list . RPAREN

    RPAREN  deslocar, e ir ao estado 62


Estado 27

   14 expre: expre . AND expre
   15      | expre . OR expre
   24 expre_opera: expre . PLUS expre
   25            | expre . MINUS expre
   26            | MINUS expre .
   27            | expre . TIMES expre
   28            | expre . DIVIDE expre
   29 expre_compa: expre . LT expre
   30            | expre . LE expre
   31            | expre . GT expre
   32            | expre . GE expre
   33            | expre . EQ expre
   34            | expre . NEQ expre

    $padrão  reduzir usando a regra 26 (expre_opera)


Estado 28

   14 expre: expre . AND expre
   15      | expre . OR expre
   24 expre_opera: expre . PLUS expre
   25            | expre . MINUS expre
   27            | expre . TIMES expre
   28            | expre . DIVIDE expre
   29 expre_compa: expre . LT expre
   30            | expre . LE expre
   31            | expre . GT expre
   32            | expre . GE expre
   33            | expre . EQ expre
   34            | expre . NEQ expre
   48 expre_if: IF expre . THEN expre

    PLUS    deslocar, e ir ao estado 42
    MINUS   deslocar, e ir ao estado 43
    TIMES   deslocar, e ir ao estado 44
    DIVIDE  deslocar, e ir ao estado 45
    EQ      deslocar, e ir ao estado 46
    NEQ     deslocar, e ir ao estado 47
    LT      deslocar, e ir ao estado 48
    LE      deslocar, e ir ao estado 49
    GT      deslocar, e ir ao estado 50
    GE      deslocar, e ir ao estado 51
    AND     deslocar, e ir ao estado 52
    OR      deslocar, e ir ao estado 53
    THEN    deslocar, e ir ao estado 63


Estado 29
